# ParticleSimulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
ParticleSimulator/: CMakeLists.txt
ParticleSimulator/config/: force_constants_01.yaml
ParticleSimulator/notes/: 01_topic.txt  02_model_view_controller.txt  03_acceleration.txt
ParticleSimulator/source/: constants.cpp  constants.h  force_engine.cpp  force_engine.h  globals.cpp  globals.h  main.cpp  particle.cpp  particle.h  particle_type.cpp  particle_type.h  stop_watch.cpp  stop_watch.h
ParticleSimulator/source/cloud/: acceleration_cloud.h  charge_cloud.h  cloud.cpp  cloud.h  cloud.hpp  cloud_template.h  cloud_template_1.h  cloud_template_2.h  cloud_template_square.h  distance_cloud.h  element_cloud.h  force_cloud.h  mass_cloud.h  position_cloud.cpp  position_cloud.h  velocity_cloud.h
ParticleSimulator/source/factory/: distribution.h  factory.cpp  factory.h  factory_options.cpp  factory_options.h
ParticleSimulator/source/ui/: display.cpp  display.h
